Experimenting with the fields screen on mobile and fixing the placeholder.

--- a/assets/css/builder.css
+++ b/assets/css/builder.css
@@ -1858,12 +1858,27 @@ All styles used for displaying table content
     -webkit-animation-direction: alternate;
             animation-direction: alternate; }
   .nf-field-wrap.ui-sortable-helper {
+    background: transparent;
     border: 2px solid #84CC1E; }
   #nf-header ul {
     display: none; }
   #nf-header .nf-button.primary {
     display: none; }
   #nf-main {
+    border: 0; }
+  .nf-field-wrap {
+    border: 0;
+    border-top: 8px solid #f1f1f1;
+    border-radius: 0;
+    margin: 0;
+    padding: 20px; }
+    .nf-field-wrap:first-child {
+      border-top: 8px solid #fff; }
+  .nf-fields-sortable-placeholder {
+    margin-top: 0;
+    margin-bottom: 0;
+    border: 4px solid #84CC1E; }
+  .nf-fields-sortable-placeholder + .nf-field-wrap {
     border: 0; }
   .nf-fields-sortable {
     border: 0;
@@ -2007,14 +2022,6 @@ All styles used for displaying table content
 @media only screen and (max-width: 660px) {
   .nf-one-half, .nf-one-third {
     width: 100%; }
-  .nf-field-wrap {
-    border: 0;
-    border-bottom: 1px solid #ccc;
-    border-radius: 0;
-    margin: 0;
-    padding: 20px; }
-    .nf-field-wrap:first-child {
-      border-top: 1px solid #ccc; }
   .nf-actions-table td:nth-child(3), .nf-actions-table th:nth-child(3) {
     display: none; }
   #nf-table-display .nf-item-controls {
